container-work/kubernetes-resources/wcf-auth-api-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcf-auth-api-service
spec:
  selector:
    app: wcf-auth-api
  ports:
  - protocol: "TCP"
    port: 5001
    targetPort: 5000
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcf-auth-api
spec:
  selector:
    matchLabels:
      app: wcf-auth-api
  replicas: 2
  template:
    metadata:
      labels:
        app: wcf-auth-api
    spec:
      containers:
      - name: wcf-auth-api-centos7
        image: wcf-auth-api-centos7:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
