container-work/kubernetes-resources/wcf-web-app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcf-web-app-service
spec:
  selector:
    app: wcf-web-app
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcf-web-app
spec:
  selector:
    matchLabels:
      app: wcf-web-app
  replicas: 10
  template:
    metadata:
      labels:
        app: wcf-web-app
    spec:
      containers:
      - name: wcf-web-app-centos7
        image: wcf-web-app-centos7:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5000
